* Bug fix: avoid double search icon on IOS devices   [ichim-david refs #90214]

--- a/bise/diazotheme/static/css/main.css
+++ b/bise/diazotheme/static/css/main.css
@@ -4420,6 +4420,9 @@ div > .admonition-title {
   width: 18px;
   height: 18px;
 }
+.search-label img {
+  display: none; /* 90214 hide double icon displaced when viewed on IOS */
+}
 
 .search-image {
   display: flex;
